cambios en scss

--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -3,10 +3,13 @@ header{
         .titulo{
             color: brown;
             text-align: center;
+            font-size: 44px;
+            font-weight: 900;
         }
         h2 {
         color: coral;
         text-align: center;
+        font-weight: 900;
         }    
     }
 }
