--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,14 @@
 
 header div .titulo {
   color: brown;
-  text-align: center; }
+  text-align: center;
+  font-size: 44px;
+  font-weight: 900; }
 
 header div h2 {
   color: coral;
-  text-align: center; }
+  text-align: center;
+  font-weight: 900; }
 
 nav div div ul li {
   font-size: 24px;
@@ -18,3 +21,37 @@ nav div div ul li {
 
 nav div div ul:hover {
   text-shadow: 0 0 10px red; }
+
+main p {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+  main p span {
+    color: blue;
+    font-style: italic;
+    font-weight: 900;
+    font-size: 24px; }
+
+main h5 {
+  color: darkorange;
+  font-weight: 500;
+  text-align: center; }
+
+.cards {
+  display: flex;
+  justify-content: space-between; }
+
+.card-title1 {
+  color: green; }
+
+.card-title2 {
+  color: gold; }
+
+.card-title2 {
+  color: midnightblue; }
+
+div div .card-body {
+  background-color: rgba(128, 128, 128, 0.548); }
+
+.redes {
+  display: flex;
+  list-style: none;
+  justify-content: space-around; }
